Cut new release using new version schema
- Add script to cut new release automatically
- New version schema is $PRODUCT_MAJOR_VERSION.$PRODUCT_MINOR_VERSION.release$NEXT_BUILD_NUMBER
- Delete old final releases that used old version schema (to avoid confusion)
- Also delete blob references from old releases that were deleted
[#133780275]

Signed-off-by: Corey Innis <cinnis@pivotal.io>

--- a/example-product/metadata/example-product.yml
+++ b/example-product/metadata/example-product.yml
@@ -11,8 +11,8 @@ stemcell_criteria:
   version: "3151.3" # Bosh stemcell should match Ops Manager with same version
 releases:
   - name: example-release
-    file: example-release-10.tgz
-    version: "10"
+    file: example-release-1.6.release11.tgz
+    version: "1.6.release11"
 
 post_deploy_errands:
   - name: example-errand
