--- a/example-release/releases/example-release/example-release-1.6.release11.yml
+++ b/example-release/releases/example-release/example-release-1.6.release11.yml
@@ -10,15 +10,23 @@ jobs:
   version: b8e48895b6fa2a8224e5907f5ee983d99eab6086
   fingerprint: b8e48895b6fa2a8224e5907f5ee983d99eab6086
   sha1: d2f557450c6a932623490f12784d27bcb054bf51
+- name: no_op
+  version: 8c5d3b5ba16186d72c633c703d65797d4d2889b2
+  fingerprint: 8c5d3b5ba16186d72c633c703d65797d4d2889b2
+  sha1: 0e923b870f44ba0e868058832dc236128aa214df
+- name: time_logger
+  version: 20de578a988bddd11ee5e83f298a8f34a48089a8
+  fingerprint: 20de578a988bddd11ee5e83f298a8f34a48089a8
+  sha1: 4a420158b1316b95915b0a4bab437c4b65c867a7
 - name: web_server
-  version: f7167b6af2edec0565ee6ec36cc726259bc2e174
-  fingerprint: f7167b6af2edec0565ee6ec36cc726259bc2e174
-  sha1: c730ac948a138e793218424a8586c9e72774b726
+  version: fb758e11f4afab34dd2da7cb8ac17f4c82c47fe8
+  fingerprint: fb758e11f4afab34dd2da7cb8ac17f4c82c47fe8
+  sha1: 3d651eba8a64cd079d9e6a5140a064b77908f202
 license:
   version: e6c4ccc65c76e75e2338d1edabdcf264d37ee663
   fingerprint: e6c4ccc65c76e75e2338d1edabdcf264d37ee663
   sha1: e9f73d92771324e6da16044b1d28d045e5eb71c3
-commit_hash: 7293fe15
+commit_hash: d6607238
 uncommitted_changes: true
 name: example-release
-version: '5'
+version: 1.6.release11
