Cut release 1.7.release13 (new version format) [#133780275]
Signed-off-by: Matt Royal <mroyal@pivotal.io>

--- a/example-release/.final_builds/jobs/web_server/index.yml
+++ b/example-release/.final_builds/jobs/web_server/index.yml
@@ -1,3 +1,7 @@
 ---
-builds: {}
+builds:
+  5e368a4a8233eae4258692168daf2dd5cd485dcd:
+    version: 5e368a4a8233eae4258692168daf2dd5cd485dcd
+    sha1: 866f85c3d0ae3640ec0a08a61f4bcae75c34b638
+    blobstore_id: d7103b58-f571-43c0-a225-b15afa0526a4
 format-version: '2'
