--- a/example-product/metadata/example-product.yml
+++ b/example-product/metadata/example-product.yml
@@ -18,8 +18,8 @@ stemcell_criteria:
   enable_patch_security_updates: true
 releases:
   - name: example-release
-    file: example-release-12.tgz
-    version: "12"
+    file: example-release-1.7.release13.tgz
+    version: "1.7.release13"
 
 post_deploy_errands:
   - name: example-errand
