--- a/example-release/releases/example-release/example-release-1.8.release14.yml
+++ b/example-release/releases/example-release/example-release-1.8.release14.yml
@@ -7,9 +7,9 @@ packages:
   dependencies: []
 jobs:
 - name: example-errand
-  version: 3db49b8415549be1073f2f43bf71b52e3adcb749
-  fingerprint: 3db49b8415549be1073f2f43bf71b52e3adcb749
-  sha1: ad6df7aa57299d18e6bc6ec33bb397f0460fc225
+  version: d5e75f6abf215e3a3f16ab1f1079a97120180324
+  fingerprint: d5e75f6abf215e3a3f16ab1f1079a97120180324
+  sha1: 7ace3dea0e72bfb0b95c64609e3cace69124c394
 - name: no_op
   version: 8c5d3b5ba16186d72c633c703d65797d4d2889b2
   fingerprint: 8c5d3b5ba16186d72c633c703d65797d4d2889b2
@@ -19,14 +19,14 @@ jobs:
   fingerprint: 20de578a988bddd11ee5e83f298a8f34a48089a8
   sha1: 4a420158b1316b95915b0a4bab437c4b65c867a7
 - name: web_server
-  version: f29c842e39e9ecf70f8aea4b2bc96730145d1dc3
-  fingerprint: f29c842e39e9ecf70f8aea4b2bc96730145d1dc3
-  sha1: dff3feff0e2f69f6288d53f284a4b901db5b4f35
+  version: a797ed1256ec21731157a52958d879394e19ce72
+  fingerprint: a797ed1256ec21731157a52958d879394e19ce72
+  sha1: e1aea4c43b158bc2b14f7f0a08bc509ebbaf74ad
 license:
   version: e6c4ccc65c76e75e2338d1edabdcf264d37ee663
   fingerprint: e6c4ccc65c76e75e2338d1edabdcf264d37ee663
   sha1: e9f73d92771324e6da16044b1d28d045e5eb71c3
-commit_hash: d14926a2
-uncommitted_changes: true
+commit_hash: 82a4d546
+uncommitted_changes: false
 name: example-release
-version: '17'
+version: 1.8.release14
