--- a/example-product/content_migrations/example-product.yml
+++ b/example-product/content_migrations/example-product.yml
@@ -567,3 +567,8 @@ migrations:
       - type: update
         selector: "product_version"
         to: *to_version
+  - from_version: "1.6.26.0"
+    rules:
+      - type: update
+        selector: "product_version"
+        to: *to_version
