--- a/example-product/metadata/example-product.yml
+++ b/example-product/metadata/example-product.yml
@@ -1,6 +1,6 @@
 ---
 name: example-product
-product_version: "1.8.11"
+product_version: "1.8.12-alpha"
 minimum_version_for_upgrade: "1.7.0"
 metadata_version: "1.8"
 label: 'Ops Manager: Example Product'
