--- a/example-product/metadata/example-product.yml
+++ b/example-product/metadata/example-product.yml
@@ -1,6 +1,6 @@
 ---
 name: example-product
-product_version: "1.9.3-alpha"
+product_version: "1.9.3"
 minimum_version_for_upgrade: "1.7.0"
 metadata_version: "1.9"
 label: 'Ops Manager: Example Product'
@@ -9,7 +9,7 @@ rank: 1
 service_broker: false # Default value
 stemcell_criteria:
   os: ubuntu-trusty
-  version: "3312.12" # Bosh stemcell should match Ops Manager with same version
+  version: "3312.15" # Bosh stemcell should match Ops Manager with same version
 
   # allows you to opt-out of the default behaviour of Ops Manager 1.8+ to always
   # use the latest patch update of an available stemcell version. Set to 'false'
