--- a/example-product/metadata/example-product.yml
+++ b/example-product/metadata/example-product.yml
@@ -1,6 +1,6 @@
 ---
 name: example-product
-product_version: "1.6.31"
+product_version: "1.6.32-alpha"
 metadata_version: "1.6"
 label: 'Ops Manager: Example Product'
 description: An example product to demonstrate Ops Manager product-author features
