--- a/example-release/releases/example-release/example-release-1.11.release22.yml
+++ b/example-release/releases/example-release/example-release-1.11.release22.yml
@@ -7,9 +7,9 @@ packages:
   dependencies: []
 jobs:
 - name: example-errand
-  version: d5e75f6abf215e3a3f16ab1f1079a97120180324
-  fingerprint: d5e75f6abf215e3a3f16ab1f1079a97120180324
-  sha1: 7ace3dea0e72bfb0b95c64609e3cace69124c394
+  version: c192281f444d0fa9ae7d66d52a0fb04a53325a9b
+  fingerprint: c192281f444d0fa9ae7d66d52a0fb04a53325a9b
+  sha1: 0b4ddcfbea94541feff73e0a57c3ccf5e8e423bf
 - name: no_op
   version: 8c5d3b5ba16186d72c633c703d65797d4d2889b2
   fingerprint: 8c5d3b5ba16186d72c633c703d65797d4d2889b2
@@ -19,14 +19,14 @@ jobs:
   fingerprint: 20de578a988bddd11ee5e83f298a8f34a48089a8
   sha1: 4a420158b1316b95915b0a4bab437c4b65c867a7
 - name: web_server
-  version: a797ed1256ec21731157a52958d879394e19ce72
-  fingerprint: a797ed1256ec21731157a52958d879394e19ce72
-  sha1: e1aea4c43b158bc2b14f7f0a08bc509ebbaf74ad
+  version: 0b200502506789f59ac5ca029caa4a9823a34f5f
+  fingerprint: 0b200502506789f59ac5ca029caa4a9823a34f5f
+  sha1: d3872c89fb71d247baf215daa298a02bab4c1d55
 license:
   version: e6c4ccc65c76e75e2338d1edabdcf264d37ee663
   fingerprint: e6c4ccc65c76e75e2338d1edabdcf264d37ee663
   sha1: e9f73d92771324e6da16044b1d28d045e5eb71c3
-commit_hash: 6e594f64
-uncommitted_changes: false
+commit_hash: 116f456d
+uncommitted_changes: true
 name: example-release
-version: 1.10.release21
+version: 1.11.release22
