--- a/example-release/.final_builds/jobs/example-errand/index.yml
+++ b/example-release/.final_builds/jobs/example-errand/index.yml
@@ -32,4 +32,8 @@ builds:
     version: c192281f444d0fa9ae7d66d52a0fb04a53325a9b
     sha1: 0b4ddcfbea94541feff73e0a57c3ccf5e8e423bf
     blobstore_id: b3e4fd06-4d64-4e55-8806-16e3d4d225ba
+  be97976b12300176b77bf32a3d79d32a382736a4:
+    version: be97976b12300176b77bf32a3d79d32a382736a4
+    sha1: 2fb8d3071ae9cc796f750315665721b37224745c
+    blobstore_id: 14c47b76-3bf1-420a-9b17-c23f42c80e38
 format-version: '2'
