Adds 1.6.32 to transmogrifier migrations
Signed-off-by: Topher Lubaway <clubaway@pivotal.io>

--- a/example-product/content_migrations/example-product.yml
+++ b/example-product/content_migrations/example-product.yml
@@ -449,3 +449,5 @@ migrations:
     rules: *update_version
   - from_version: "1.6.31.0"
     rules: *update_version
+  - from_version: "1.6.32.0"
+    rules: *update_version
