Add properties to test credhub migration in upgrades from this product
[#143464505]

Signed-off-by: Ryan Richard <rrichard@pivotal.io>

--- a/example-release/.final_builds/jobs/example-errand/index.yml
+++ b/example-release/.final_builds/jobs/example-errand/index.yml
@@ -28,4 +28,8 @@ builds:
     version: d5e75f6abf215e3a3f16ab1f1079a97120180324
     sha1: 7ace3dea0e72bfb0b95c64609e3cace69124c394
     blobstore_id: 30697b33-a66e-478b-8af0-cda2070e2596
+  bcf3c4f665a6648804c0a213f68f6db93ed2a90f:
+    version: bcf3c4f665a6648804c0a213f68f6db93ed2a90f
+    sha1: 5c28f18e3507c40c90a5b90100239bc2d49c2466
+    blobstore_id: 636cf565-d4f3-450a-a761-556546497c46
 format-version: '2'
