fix a mistake in the previous commit where i forgot to change the name of the bosh variable in the manifest snippet [#143464505]
Signed-off-by: Ryan Richard <rrichard@pivotal.io>

--- a/example-release/releases/example-release/index.yml
+++ b/example-release/releases/example-release/index.yml
@@ -8,4 +8,6 @@ builds:
     version: 1.11.release24
   4318efcb-c9af-4b69-bcdf-a8cd22949423:
     version: 1.11.release25
+  17ba41f3-7b99-4da1-9861-e9837b833ae7:
+    version: 1.11.release26
 format-version: '2'
