Migrate rsa_p_key_credentials to credhub
[#143464505]

--- a/example-release/.final_builds/jobs/example-errand/index.yml
+++ b/example-release/.final_builds/jobs/example-errand/index.yml
@@ -44,4 +44,8 @@ builds:
     version: 614bec8233f9a1e195e57bb518949014e163e663
     sha1: 1af8e904d458a7c16b85c0b2418edc3a4a2fe50a
     blobstore_id: 622186ff-48f7-4644-97e7-b4720d45937d
+  4c51c7c17c2710be328c73608d6b9045eca42cb6:
+    version: 4c51c7c17c2710be328c73608d6b9045eca42cb6
+    sha1: 809d37cfdb6056d1dfa8f81c9c296c48250c2645
+    blobstore_id: 064753f1-f978-48d6-a07f-9d00f1b2938a
 format-version: '2'
