Add migration to migrate a simple credential to credhub
and then look to credhub for the variable value

[#143609427]

Signed-off-by: Caroline Taymor <ctaymor@pivotal.io>

--- a/example-release/.final_builds/jobs/example-errand/index.yml
+++ b/example-release/.final_builds/jobs/example-errand/index.yml
@@ -52,4 +52,8 @@ builds:
     version: 5ef2a12fd2cb9b32fcdf7a3b29abd348f1738ce0
     sha1: 337017440faea0dff07cfae830b6778554eeff9a
     blobstore_id: 5ec546f5-8df6-48af-9567-e157257af25a
+  f3d1c5f963b78dcaad882f4abd2fe9c93438dd7d:
+    version: f3d1c5f963b78dcaad882f4abd2fe9c93438dd7d
+    sha1: db52cf305135e3c8899a642a925c518776ed9eee
+    blobstore_id: 7de47ebe-510a-4ae6-8689-efd5d95aa9f0
 format-version: '2'
