--- a/example-release/.final_builds/jobs/example-errand/index.yml
+++ b/example-release/.final_builds/jobs/example-errand/index.yml
@@ -56,4 +56,8 @@ builds:
     version: f3d1c5f963b78dcaad882f4abd2fe9c93438dd7d
     sha1: db52cf305135e3c8899a642a925c518776ed9eee
     blobstore_id: 7de47ebe-510a-4ae6-8689-efd5d95aa9f0
+  638a6fef1cf9e4f1b06a83ca698e868bfbf81cd0:
+    version: 638a6fef1cf9e4f1b06a83ca698e868bfbf81cd0
+    sha1: f6fda329adcee6047d6cc47dc39cd6dbf318751a
+    blobstore_id: e7c2868d-777a-4fd4-86b5-c3d9e9d04abc
 format-version: '2'
