--- a/example-release/releases/example-release/example-release-2.0.release32.yml
+++ b/example-release/releases/example-release/example-release-2.0.release32.yml
@@ -7,9 +7,13 @@ packages:
   dependencies: []
 jobs:
 - name: example-errand
-  version: 638a6fef1cf9e4f1b06a83ca698e868bfbf81cd0
-  fingerprint: 638a6fef1cf9e4f1b06a83ca698e868bfbf81cd0
-  sha1: f6fda329adcee6047d6cc47dc39cd6dbf318751a
+  version: 2397902c2471b5347dd556f8bf68cbb447145c06
+  fingerprint: 2397902c2471b5347dd556f8bf68cbb447145c06
+  sha1: 3a0b239ef25d754c3d4fd2506ca9d0da29b736b8
+- name: example_colocated_errand
+  version: 976b7425a7f7ad3965d332d58983ac69d75a1554
+  fingerprint: 976b7425a7f7ad3965d332d58983ac69d75a1554
+  sha1: 5bd44b166764c5702e83c8a4ef4f2ebfd5185089
 - name: no_op
   version: 8c5d3b5ba16186d72c633c703d65797d4d2889b2
   fingerprint: 8c5d3b5ba16186d72c633c703d65797d4d2889b2
@@ -19,14 +23,14 @@ jobs:
   fingerprint: 20de578a988bddd11ee5e83f298a8f34a48089a8
   sha1: 4a420158b1316b95915b0a4bab437c4b65c867a7
 - name: web_server
-  version: d9e77e38ecffcb50800762e639113c54dc193c2c
-  fingerprint: d9e77e38ecffcb50800762e639113c54dc193c2c
-  sha1: 5266e39a5566c07da27813970fa309776124e59d
+  version: 5424bf59e2789817ff84723a69598451b76eaabc
+  fingerprint: 5424bf59e2789817ff84723a69598451b76eaabc
+  sha1: b380dc2d5e39af401fc319fc5d4fff980eeb9bbe
 license:
   version: e6c4ccc65c76e75e2338d1edabdcf264d37ee663
   fingerprint: e6c4ccc65c76e75e2338d1edabdcf264d37ee663
   sha1: e9f73d92771324e6da16044b1d28d045e5eb71c3
-commit_hash: cee2213f
+commit_hash: 879a6c26
 uncommitted_changes: false
 name: example-release
-version: 2.0.release31
+version: 2.0.release32
