--- a/example-release/releases/example-release/example-release-2.1.release33.yml
+++ b/example-release/releases/example-release/example-release-2.1.release33.yml
@@ -30,7 +30,7 @@ license:
   version: e6c4ccc65c76e75e2338d1edabdcf264d37ee663
   fingerprint: e6c4ccc65c76e75e2338d1edabdcf264d37ee663
   sha1: e9f73d92771324e6da16044b1d28d045e5eb71c3
-commit_hash: 879a6c26
-uncommitted_changes: false
+commit_hash: dadde1d1
+uncommitted_changes: true
 name: example-release
-version: 2.0.release32
+version: 2.1.release33
