--- a/example-release/releases/example-release/index.yml
+++ b/example-release/releases/example-release/index.yml
@@ -4,4 +4,6 @@ builds:
     version: 1.12.release30
   55d8741d-520f-4769-a7dc-e32f51971e69:
     version: 2.0.release32
+  b0c91217-1ef3-401d-a489-8f6aea92c086:
+    version: 2.1.release33
 format-version: '2'
