Updating example product to be an On Demand Broker
- Included instructions on how to pretend to be a broker for testing IP
allocations

[#152766028] Remove the service network check box and API parameter when the Operator is defining a network on the Director Tile

Signed-off-by: Sam Serrano <sserrano@pivotal.io>

--- a/example-release/releases/example-release/index.yml
+++ b/example-release/releases/example-release/index.yml
@@ -8,4 +8,6 @@ builds:
     version: 2.1.release33
   0a169a5f-3079-48e5-8af8-857b33c7d823:
     version: 2.1.release34
+  4f8235da-1034-407a-8fbb-03e36c068e97:
+    version: 2.1.release35
 format-version: '2'
