--- a/example-release/.final_builds/jobs/web_server/index.yml
+++ b/example-release/.final_builds/jobs/web_server/index.yml
@@ -28,4 +28,8 @@ builds:
     version: 5b5eb73c9fea84ab46f2f3100caba2935567441b
     sha1: deac3f35578292231d49f9dfc65418128b5738df
     blobstore_id: 866ee328-12f6-455d-919a-b21254c0bfc5
+  78f6599228c94ab7152df94af3873f0fbfb8a792:
+    version: 78f6599228c94ab7152df94af3873f0fbfb8a792
+    sha1: 1723cb18c1ae33364ea16b5f43f1a66c62a83ac4
+    blobstore_id: 5c1edb5d-5569-4821-91ca-6bfbce77a774
 format-version: '2'
