--- a/example-release/config/final.yml
+++ b/example-release/config/final.yml
@@ -3,5 +3,6 @@ blobstore:
   provider: s3
   options:
     bucket_name: example-release-blobs
+    region: us-west-1
     endpoint: https://s3-us-west-1.amazonaws.com
 final_name: example-release
