--- a/example-release/releases/example-release/index.yml
+++ b/example-release/releases/example-release/index.yml
@@ -12,4 +12,6 @@ builds:
     version: 2.1.release35
   31981a63-0fa0-4ff6-aff8-cdcca4afe88b:
     version: 2.1.release36
+  db08ff7c-dd15-41b1-8996-c656f4547ca1:
+    version: 2.1.release37
 format-version: '2'
