Add credentials to example release
- cut new example release
- add credentials/secrets to be able to test (via a forthcoming system
spec) that BOSH correctly interpolates the variables out of credhub

[#156358734] Copy`$` context credentials to CredHub and interpolate bosh credhub double parens when a tile author refers to these credentials

--- a/example-release/releases/example-release/index.yml
+++ b/example-release/releases/example-release/index.yml
@@ -4,4 +4,6 @@ builds:
     version: 2.2.release37
   426296c5-2ba9-4561-8120-e491f59a2db6:
     version: 2.2.release38
+  a2a3572b-7ef9-4b6c-a359-059e4e63f15b:
+    version: 2.2.release39
 format-version: '2'
