--- a/example-release/.final_builds/jobs/example-errand/index.yml
+++ b/example-release/.final_builds/jobs/example-errand/index.yml
@@ -68,4 +68,8 @@ builds:
     version: 8956461f3693019745a08c8d4cfb25570399aa22
     sha1: dba7f7281fcf502fe181f1f296ff52996b588f35
     blobstore_id: ceeebdfb-0066-4987-8099-edb6260fc3e1
+  38d4e2b71c57ff0ab66467946022eacd44991922:
+    version: 38d4e2b71c57ff0ab66467946022eacd44991922
+    sha1: 9ad908ed27ed6f4380461bf57c50afce06925417
+    blobstore_id: 501ba57b-7dc7-4af9-a9ed-f3a5b9ac795f
 format-version: '2'
