--- a/example-release/.final_builds/jobs/web_server/index.yml
+++ b/example-release/.final_builds/jobs/web_server/index.yml
@@ -36,4 +36,8 @@ builds:
     version: bd79ed2ae23ae342103dbd52eca512584f0a23cb
     sha1: 7dcf06defac03fab510097cad995a280cc075a35
     blobstore_id: 3430d41e-68fc-4d92-9239-09982e260bc2
+  087016c9112d8b8627da4d21fb7ea33b49f59e4a:
+    version: 087016c9112d8b8627da4d21fb7ea33b49f59e4a
+    sha1: b4aec6e15af1ce26c2ead6331a3062dacd4add2c
+    blobstore_id: 7283c249-e26b-489c-aced-4efd79e61806
 format-version: '2'
