Expose more credentials in example web server
[#158471123] Operator should be able to rotate to new CA for BOSH DNS Healthiness certs that is valid for 4 years

Signed-off-by: Shaan Sapra <shsapra@pivotal.io>

--- a/example-release/.final_builds/jobs/web_server/index.yml
+++ b/example-release/.final_builds/jobs/web_server/index.yml
@@ -24,4 +24,8 @@ builds:
     version: 5424bf59e2789817ff84723a69598451b76eaabc
     sha1: b380dc2d5e39af401fc319fc5d4fff980eeb9bbe
     blobstore_id: c3de6f56-2339-4f0b-b27d-b9046655fbe0
+  137fb8eac7c8ebebe5d3a98e07341e9269a8e13e:
+    version: 137fb8eac7c8ebebe5d3a98e07341e9269a8e13e
+    sha1: 2b61f48f0c62c710d41f06482018e4bcdaf66d66
+    blobstore_id: 3cbe8427-ce89-4354-8ec2-40cb2afcdc8a
 format-version: '2'
