Expose more credentials in example web server
[#158471123] Operator should be able to rotate to new CA for BOSH DNS Healthiness certs that is valid for 4 years

Signed-off-by: Nick Webb <nwebb@pivotal.io>

--- a/example-release/.final_builds/jobs/web_server/index.yml
+++ b/example-release/.final_builds/jobs/web_server/index.yml
@@ -36,4 +36,8 @@ builds:
     version: bd79ed2ae23ae342103dbd52eca512584f0a23cb
     sha1: 7eda16c2762d4f427b4508333b681dd6722c50df
     blobstore_id: b4dc20cd-d4ba-426f-b065-2ca18e8fc073
+  1b9483e087487ded9eff76d7535e4af62399e881:
+    version: 1b9483e087487ded9eff76d7535e4af62399e881
+    sha1: 129dfaa0b3feb8a77c9687d8cc6648b82cc35b34
+    blobstore_id: 9b9aba22-3c2f-4f52-bd15-d1a2a576ad0e
 format-version: '2'
