--- a/example-release/releases/example-release/index.yml
+++ b/example-release/releases/example-release/index.yml
@@ -14,4 +14,6 @@ builds:
     version: 2.1.release36
   db08ff7c-dd15-41b1-8996-c656f4547ca1:
     version: 2.1.release37
+  96ddafb9-8ac9-4194-aef0-e3a5d287ae0d:
+    version: 2.1.release38
 format-version: '2'
