--- a/example-release/releases/example-release/index.yml
+++ b/example-release/releases/example-release/index.yml
@@ -2,4 +2,6 @@
 builds:
   e729776d-c0aa-460c-95f6-bc9bfc373c10:
     version: 2.3.release40
+  d4da4a4b-026a-4314-8f65-2e44711f0225:
+    version: 2.3.release41
 format-version: '2'
