--- a/example-release/releases/example-release/index.yml
+++ b/example-release/releases/example-release/index.yml
@@ -6,4 +6,6 @@ builds:
     version: 2.2.release38
   a2a3572b-7ef9-4b6c-a359-059e4e63f15b:
     version: 2.2.release39
+  3f153ded-99c2-45d1-b795-4e4b216994ee:
+    version: 2.2.release40
 format-version: '2'
