--- a/example-release/releases/example-release/index.yml
+++ b/example-release/releases/example-release/index.yml
@@ -6,4 +6,6 @@ builds:
     version: 2.0.release32
   d77f4c10-2b15-4a0d-bc11-407289918ead:
     version: 2.0.release33
+  d4ac58a0-369b-453e-a176-fb4bb49dd130:
+    version: 2.0.release34
 format-version: '2'
